@@ -26,9 +26,3 @@ void
 grub_stop_floppy (void)
 {
 }
-
-void
-grub_arch_sync_caches (void *address __attribute__ ((unused)),
-		       grub_size_t len __attribute__ ((unused)))
-{
-}
